--- a/templates/index.html
+++ b/templates/index.html
@@ -5,14 +5,23 @@
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
+
         <form class="d-flex" method="POST" onSubmit='return validate();' action="/search">
             <input class="form-control me-2" name="search-query" type="search" placeholder="Search" aria-label="Search"
                    autofocus="autofocus">
             <button class="btn btn-primary" type="submit" onclick='this.form.submit();'>Search</button>
             <input name="upf-irwa-hidden" type="hidden" value="123">
         </form>
+
         <p>&nbsp;</p>
         <p>&nbsp;</p>
         <p>&nbsp;</p>
+
+        <!-- BOTONES DE ANALYTICS -->
+        <div class="text-center" style="margin-top: 20px;">
+            <a href="/dashboard">
+                <button class="btn btn-secondary">Analytics Dashboard</button>
+            </a>
+        </div>
     </div>
 {% endblock %}
